@@ -12,13 +12,24 @@ t/04static.t
 t/05dirs.t
 t/06include_path.t
 t/07mime_types.t
+t/08subreq.t
+t/09ignore_ext.t
+t/10ignore_dirs.t
 t/lib/TestApp.pm
 t/lib/TestApp/root/always-static/test
 t/lib/TestApp/root/css/static.css
 t/lib/TestApp/root/files/bad.gif
 t/lib/TestApp/root/files/err.omg
 t/lib/TestApp/root/files/static.css
+t/lib/TestApp/root/ignored/bad.gif
+t/lib/TestApp/root/ignored/index.html
+t/lib/TestApp/root/ignored/static.css
+t/lib/TestApp/root/ignored/tmpl.tt
 t/lib/TestApp/root/images/bad.gif
 t/lib/TestApp/root/images/catalyst.png
 t/lib/TestApp/root/incpath/incpath.css
+t/lib/TestApp/root/overlay/o-ignored/bad.gif
+t/lib/TestApp/root/overlay/o-ignored/index.html
+t/lib/TestApp/root/overlay/o-ignored/static.css
+t/lib/TestApp/root/overlay/o-ignored/tmpl.tt
 t/lib/TestApp/root/overlay/overlay.jpg
